--- a/staticpage_3220_1876.html
+++ b/staticpage_3220_1876.html
@@ -68,9 +68,9 @@ img {
 
   <!-- Header Starts Here -->
 
-  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
+  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
-    <h1>Static Page</h1>
+    <h1>pahe d</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -80,28 +80,13 @@ img {
 
   
 
-  <div class="staticPageList">
-<ul data-role="listview" >
-	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_3220_1876.html">
-                                	<img src="http://app-gorilla.com/members/wizard/mediafiles/jarnail_37/thumb/jarnail_1394715759_256x256.jpg" class="ui-li-thumb">
-                                <h2>
-                pahe d                </h2>
-                <p><br></p>
-                
-            </a></li>
-	
-		 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_3220_1877.html">
-                                	<img src="http://app-gorilla.com/members/wizard/mediafiles/jarnail_37/thumb/jarnail_1394715789_256x256.jpg" class="ui-li-thumb">
-                                <h2>
-                asdasd sad                </h2>
-                <p><br></p>
-                
-            </a></li>
-	
-	
-</ul>
-</div>
+  <div class="staticPage">
 
+  
+
+  <br>
+
+  </div>
 
   
 
