--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ img {
 						<td>
 						
 							<a class="item link" rel="external" data-ajax="flase" href="staticpage_3220.html">
-																	<img src="images/staticpage.png " />
+																	<img src="icon(4).png" />
 															</a>
 						</td>
 						<td>
