--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ img {
 						</td>
 						<td>
 							<a href="photosub_3221.html" rel="external" data-ajax="flase" >
-								<label>Photos</label>
+								<label>Photosfghfhfg</label>
 							</a>
 						</td>
 					</tr>
