--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <link rel="stylesheet" href="css/jquery.mobile-1.4.0.css" />
 
-<link rel="stylesheet" href="css/wooden_theme.css" />
+<link rel="stylesheet" href="css/theme.css" />
 
 <link rel="stylesheet" href="css/common_layout.css" />
 
@@ -94,7 +94,7 @@ img {
 						<td>
 						
 							<a class="item link" rel="external" data-ajax="flase" href="photosub_3221.html">
-																	<img src="icon(7).png" />
+																	<img src="8.png" />
 															</a>
 						</td>
 						<td>
@@ -138,7 +138,7 @@ img {
 						<td>
 						
 							<a class="item link" rel="external" data-ajax="flase" href="location_3219.html">
-																	<img src="images/location.png " />
+																	<img src="9.png" />
 															</a>
 						</td>
 						<td>
